[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
cron = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = "0.7.10"